[tool.poetry]
name = "sms-notebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sms_notebook"}]

[tool.poetry.dependencies]
python = "^3.11.4"
jupyterlab = "^4.0.2"
requests = "^2.31.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
